# anime_guesser

./: .env  .env.example  .gitignore  docker-compose.yml  readme.md
animeguesser/backend/: composer.json
animeguesser/backend/config/: cors.php
animeguesser/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
animeguesser/frontend/src-tauri/: Cargo.toml  tauri.conf.json
animeguesser/frontend/src-tauri/src/: main.rs
backend-laravel/: .env.example  README.md  setup.php
backend/app/Models/: Report.php  (+1 more)
backend/config/: sanctum.php
backend/routes/: api.php
backup/: backup.sh  status.sh
dashboard/: package.json  server.js
dashboard/backend/: package.json  server.js
dashboard/public/: index.html
docker/: .env.example  README.md  docker-compose.yml  init.sh
docker/backend/: Dockerfile
docker/backup/: Dockerfile  docker-compose.yml  status.sh
docker/dashboard/: Dockerfile  server.js
docker/frontend/: Dockerfile  Dockerfile.release  nginx-spa.conf
docker/nginx-lb/: nginx.conf
docker/version-server/: Dockerfile
docker/version-watchdog/: Dockerfile
frontend/: README.md  package-lock.json  package.json  server.js  vite.config.js
frontend/src/: App.jsx  admin-server.html  admin-stats.html  admin-users.html  auth.html  game.html  home.html  index.jsx  leaderboard.html  mod-animes.html  mod-reports.html  profile.html  shared.js  sidebar.js  styles.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
nginx-lb/: Dockerfile  nginx.conf
scripts/: bump-version.sh
version-server/: animeguesser.jks  build-release.sh
(+91 files in other folders)
