[package]
name = "anime-guesser"
version = "0.1.0"
description = "AnimeGuesser — devine le personnage d'anime"
authors = []
edition = "2021"
rust-version = "1.77"

[lib]
name = "anime_guesser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "anime-guesser"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"   # réduction de la taille du binaire
codegen-units = 1 # meilleure optimisation
lto = true
opt-level = "s"   # optimise la taille plutôt que la vitesse
strip = true
